--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Kyan Tran",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.18.2",
